abcte.org (archived on 2017-04-30)
{
  "alexa_rank": 322641,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 2234,
  "classifier_probability": 0.91,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.44,
  "homepage_snapshot_redirected_domain": "abcte.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170210100625id_/http://abcte.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170210100625id_/http%3A//abcte.org",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "abcte.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170430185923id_/http%3A//abcte.org/privacy-policy",
  "policy_title": "Privacy Policy - ABCTE | Online Teaching Certification Program",
  "policy_url": "abcte.org/privacy-policy",
  "sha1": "e107259a185389f9870d9be073a7f1f58c244bec",
  "simhash": 10680016612650551499,
  "simhash_updated": false,
  "site_hostname": "abcte.org",
  "site_url": "http://abcte.org",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20170430185923",
  "word_count": 335,
  "year": 2017
}

--- a/a/ab/abc/abcte.org.html
+++ b/a/ab/abc/abcte.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the abcte.org privacy policy that was archived on 2016-12-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161221205922id_/http%3A//abcte.org/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the abcte.org privacy policy that was archived on 2017-04-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170430185923id_/http%3A//abcte.org/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en-US" xmlns:og="http://opengraphprotocol.org/schema/"><!--<![endif]--><head>
 
@@ -657,7 +657,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <ul class="footer-info">
 <li class="info first-child">© American Board for Certification of Teacher Excellence – </li>
 <li class="info">1123 Zonolite Road, Suite 29, Atlanta, Ga 30306</li>
-<li class="info last-child">Toll Free: 1-877-669-2228 | FAX: 301-576-3825</li>
+<li class="info last-child">Toll Free: 1-877-669-2228| Candidate Services Team: 866-445-5258 | FAX: 301-576-3825</li>
 </ul>      <div class="clear"></div>
       <div class="menu">
       <div class="footer-menu"><ul id="menu-footer" class="footer-ul"><li id="menu-item-28" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-28"><a href="/privacy-policy/">Privacy Policy</a></li>
