--- a/s/sh/sha/sharedcount.com.html
+++ b/s/sh/sha/sharedcount.com.html
@@ -1,26 +1,43 @@
-<!--The following is the downloaded HTML source of the sharedcount.com privacy policy that was archived on 2016-11-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161119141943id_/http%3A//www.sharedcount.com/admin/docs/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sharedcount.com privacy policy that was archived on 2017-05-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170501001349id_/http%3A//www.sharedcount.com/admin/docs/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" class="no-js"><!--<![endif]--><head>
 <meta charset="utf-8">
 <title>SharedCount: Social URL Analytics</title>
-<meta name="description" content="Track URL shares, likes, tweets, and more.">
+<meta name="description" content="Track Social URL shares, likes, and more. Facebook, Google, Pinterest, LinkedIn, StumbleUpon.">
+<meta name="author" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="shortcut icon" href="/favicon.ico">
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
+<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
+<link rel="icon" type="image/png" href="/android-chrome-192x192.png" sizes="192x192">
+<meta name="msapplication-square70x70logo" content="/smalltile.png">
+<meta name="msapplication-square150x150logo" content="/mediumtile.png">
+<meta name="msapplication-wide310x150logo" content="/widetile.png">
+<meta name="msapplication-square310x310logo" content="/largetile.png">
 <meta name="google-site-verification" content="3tNgTpoX37-FIc7VT3QcnbS61DKyapZ81aP1XZDz8yo">
-<link rel="stylesheet" href="/css/style.css?v=">
+<link rel="stylesheet" href="/css/style.css?v=20150224">
  
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
- 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">
-<script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-W8WDX9"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-W8WDX9"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.9&amp;appId=9080567582"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
  
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script>
+
 window.SharedCount = { 
 		settings : {
 			host : "free.sharedcount.com",
-			apikey : "479dfb502221d2b4c4a0433c600e16ba5dc0df4e",
+			apikey : "eyJkYXRhIjoie1wiYXBpa2V5XCI6XCIxOTM0ZjUxOWE2M2UxNDJlMGQzYzg5M2U1OWNjMzdmZTAxNzJlOThhXCIsXCJkYXRlXCI6XCIyMDE3LTA1LTAxXCJ9Iiwic2lnIjoiRTNyTG52b0FSRzN4cmpFUFg5SGFuSCtaZUFZUkhqU0w5XC96RmpoQ2NvWWM9IiwicHViS2V5IjoicHVibGljX2tleV91c2VyX2lkXzk5OTkifQ==",
 			login : null
 		},
 		trackEvent: function(category, action, label, value){
@@ -45,7 +62,25 @@ _gaq.push( ['_trackPageview', location.pathname + location.search + location.has
 })();
 
 </script>
-<script src="/js/script.js?v=1"></script>
+</head><body><div id="fb-root"></div>
+<script>
+//Facebook Share/Like
+(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.9&appId=9080567582";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));
+
+//Twitter Share
+$(window).load(function(){		
+	!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+
+});
+
+</script>
+<script src="/js/script.js?v=20150224"></script>
 <script>
 var domain = location.hostname === "www.sharedcount.com" ? "https://sharedcount-www.appspot.com" : "";
 $.get("/admin/user/info.php", function(data){
@@ -75,16 +110,14 @@ $.get("/admin/user/info.php", function(data){
 	
 })
 </script>
-</head>
-<body>
+
+
 <div id="container" style="">
 <header>
-<a href="/"><img src="/logo.png" alt="Shared Count" style="
-		    width: 500px;
-		"></a>
-<h2>Track URL shares, likes, tweets, and more.</h2>
+<a href="/"><img src="/sharedcount.svg" alt="Shared Count" style="width: 500px;"></a>
+<h2>Track URL shares, likes, and more.</h2>
 </header>
-<div class="navbar navbar-fixed-top navbar-inverse">
+<div class="navbar navbar-fixed-top navbar-inverse" style="border: 0;">
 <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
 <span class="sr-only">Toggle navigation</span>
 <span class="icon-bar"></span>
@@ -93,7 +126,7 @@ $.get("/admin/user/info.php", function(data){
 </button>
 <div class="navbar-inner">
 <div class="container" style="	padding-left: 0;	margin-left: 0;">
-<a class="navbar-brand" href="/"><img style="margin-top: -2px;width:inherit; height:19px" src="/APpd7.png" alt="Shared Count"></a>
+<a class="navbar-brand" href="/"><img style="margin-top: -2px;width:inherit; height:19px" src="/sharedcount_white.svg" alt="Shared Count"></a>
 <div class="nav-collapse collapse navbar-collapse bs-navbar-collapse">
 <ul class="nav navbar-nav">
 <li class=""><a href="/">Home</a></li>
@@ -105,7 +138,7 @@ $.get("/admin/user/info.php", function(data){
 </ul>
 <ul class="nav navbar-nav navbar-right">
 <li class="loggedin-controls"><a href="/admin/user/home.php"><span class="hidden">Account</span></a></li>
-<li class="loggedin-controls"><a href="/admin/logout.php"><span class="hidden">Logout</span></a></li>
+<li class="loggedin-controls"><form action="/admin/logout.php" method="post"><input type="hidden" name="csrf" value=""> <button style="background: none!important;border: none;font: inherit;border-bottom: 1px solid #444;cursor: pointer;font-size: 90%;padding: 15px;"><span style="color: white;" class="hidden">Logout</span></button></form></li>
 <li class="loggedout-controls"><a href="/admin/login.php"><span class="hidden">Login</span></a></li>
 <li class="loggedout-controls"><a href="/admin/signup.php"><span class="hidden">Sign Up</span></a></li>
 </ul>
@@ -137,29 +170,17 @@ $.get("/admin/user/info.php", function(data){
 <footer class="footer">
 <div class="">
 <p>
-</p><p class="twitter-button"><a href="http://twitter.com/sharedcount" class="twitter-follow-button" data-width="160px" data-show-count="false" data-align="bottom">Follow @sharedcount</a></p>
+</p><div style="white-space: nowrap;">
+<p class="twitter-button"><a href="http://twitter.com/sharedcount" class="twitter-follow-button" data-width="160px" data-show-count="false" data-align="bottom">Follow @sharedcount</a></p>
+<p>
+</p><div class="fb-like" data-href="https://www.facebook.com/sharedcount/" data-layout="button" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
+<p></p>
+</div>
 <p>&nbsp;</p>
 <p class="">
-</p><p class="">SharedCount, Inc.</p>
+</p><p class=""><a href="http://amperslash.com/" target="_blank" style="color: inherit">Amperslash Ltd.</a></p>
 <p><small><a href="/admin/docs/privacy.php">Privacy Policy</a> | <a href="/admin/docs/terms.php">Terms of Service</a></small></p>
 <p></p>
-
-<script>
-if(!location.pathname.match(/^\/admin/)){
-	$(window).load(function(){		
-		!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
-
-	});
-	
-}
-else{
-	$(function(){
-		$(".twitter-button").remove();
-		
-	});
-	
-}
-	</script>
 </div>
 </footer>
  
