--- a/s/sa/sav/saversplanet.com.html
+++ b/s/sa/sav/saversplanet.com.html
@@ -1,9 +1,28 @@
-<!--The following is the downloaded HTML source of the saversplanet.com privacy policy that was archived on 2016-11-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161126175228id_/http%3A//www.saversplanet.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the saversplanet.com privacy policy that was archived on 2017-05-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170501144406id_/http%3A//www.saversplanet.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD html 4.01 Transitional//EN" "http://www.w3c.org/TR/1999/REC-html401-19991224/loose.dtd"><html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Privacy Policy - SaversPlanet.com</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<link rel="manifest" href="/manifest.json">
+<script async="" src="//www.google-analytics.com/analytics.js"></script><script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async="async"></script>
+  <script>
+    var OneSignal = window.OneSignal || [];
+    OneSignal.push(["init", {
+      appId: "7cb5cd1f-ae3e-4948-92db-6f455bd96d73",
+      autoRegister: true, /* Set to true to automatically prompt visitors */
+      subdomainName: 'saversplanet',
+      /*
+      subdomainName: Use the value you entered in step 1.4: http://imgur.com/a/f6hqN
+      */
+      httpPermissionRequest: {
+        enable: true
+      },
+      notifyButton: {
+          enable: true /* Set to false to hide */
+      }
+    }]);
+  </script>
 <link href="/styles.css" type="text/css" rel="stylesheet">
 <meta content="Free Screensavers Download. Nature Screesavers, Aquarium Screensavers." name="description">
 <meta content="free screensavers, download nature screensavers, aquarium, fish" name="keywords">
@@ -49,12 +68,7 @@
   <li><a href="http://www.saversplanet.com/planes-wallpapers/">Planes</a></li>
 </ul>
 <div class="txtAd">
-<script async="" src="//www.google-analytics.com/analytics.js"></script><script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- saversplanet_728x15 -->
-<ins class="adsbygoogle" style="display:inline-block;width:728px;height:15px" data-ad-client="ca-pub-7501229088957817" data-ad-slot="2079812279"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+
 </div>
 <div id="contentmid">
 <div class="gameBoxRight">
@@ -77,7 +91,7 @@ With respect to Ad Servers: We are currently partnering with Google to deliver a
 </div>
 </div>
 </div>
-<div id="contentright" style="width:120x; height:900px; BORDER-RIGHT: #99cc00 1px dotted; BORDER-TOP: #99cc00 1px dotted; MARGIN-TOP: 0.5em; MARGIN-BOTTOM: 0.5em; BORDER-LEFT: #99cc00 1px dotted; BORDER-BOTTOM: #99cc00 1px dotted">
+<div id="contentright" style="width:120x; height:950px; BORDER-RIGHT: #99cc00 1px dotted; BORDER-TOP: #99cc00 1px dotted; MARGIN-TOP: 0.5em; MARGIN-BOTTOM: 0.5em; BORDER-LEFT: #99cc00 1px dotted; BORDER-BOTTOM: #99cc00 1px dotted">
 <center>
 <b>Subscribe to Newsletter:</b>
 <form action="http://sub.ezinedirector.net/index.cfm" method="post">
@@ -121,9 +135,9 @@ With respect to Ad Servers: We are currently partnering with Google to deliver a
 </table>
 <br>-->
 <b>Latest Screensavers</b>
-<a href="http://www.saversplanet.com/pumpkin-fire-screensaver/" target="_blank"><img src="/logo/pumpkinfire.jpg" width="100" height="75" alt="Pumpkin Fire Screensaver" vspace="5" border="0"></a>
-<a href="http://www.saversplanet.com/moonlit-ship-screensaver/" target="_blank"><img src="/logo/moonlitship.jpg" width="100" height="75" alt="Moonlit Ship Screensaver" vspace="5" border="0"></a>
-<a href="http://www.saversplanet.com/japan-spring-screensaver/" target="_blank"><img src="/logo/japanspring.jpg" width="100" height="75" alt="Japan Spring Screensaver" vspace="5" border="0"></a>
+<a href="http://www.saversplanet.com/paradise-birds-screensaver/" target="_blank"><img src="/logo/paradisebirds.jpg" width="100" height="75" alt="Paradise Birds Screensaver" vspace="5" border="0"></a>
+<a href="http://www.saversplanet.com/happy-valentines-screensaver/" target="_blank"><img src="/logo/happyvalentines.jpg" width="100" height="75" alt="Happy Valentines Screensaver" vspace="5" border="0"></a>
+<a href="http://www.saversplanet.com/holiday-champagne-screensaver/" target="_blank"><img src="/logo/holidaychampagne.jpg" width="100" height="75" alt="Holiday Champagne Screensaver" vspace="5" border="0"></a>
 <br>
 <br>
 <b>Top 5 Screensavers</b>
@@ -133,11 +147,18 @@ With respect to Ad Servers: We are currently partnering with Google to deliver a
 <a href="http://www.saversplanet.com/fantastic-walk/" target="_blank"><img src="/logo/fantastic.jpg" width="100" height="75" alt="Fantastic Walk Screensaver" vspace="5" border="0"></a>
 <a href="http://www.saversplanet.com/clock-mechanism/" target="_blank"><img src="/logo/mechanism.jpg" width="100" height="75" alt="Clock Mechanism Screensaver" vspace="5" border="0"></a>
 <br>
-<a href="http://saversplanet.top20free.com" target="_blank"><img src="/img/top20free88x53PD.gif" width="88" height="31" alt="Top20Free"></a>
-<br><br>
+<br>
+<b>Our friends:</b>
+<br>
+<!--<a href="http://saversplanet.top20free.com" target="_blank"><img src="/img/top20free88x53PD.gif" width="88" height="31" alt="Top20Free"></a>-->
+<a href="https://www.windows10screensavers.net/download-windows-10-screensavers/">Windows 10 Screensavers</a>
+<br>
+<br>
+<a href="http://www.fullscreensavers.com/free-screensavers/">Free Screensavers</a>
+<br>
+<br>
 </center>
 </div>
-
 <div id="allSSList">
 <h3>Free Screensavers List</h3>
 <ul class="SSList">
@@ -163,6 +184,7 @@ With respect to Ad Servers: We are currently partnering with Google to deliver a
   <li><a href="http://www.saversplanet.com/cowboy-ride/">Cowboy Ride</a></li>
   <li><a href="http://www.saversplanet.com/crocus-screensaver/">Crocus</a></li>
   <li><a href="http://www.saversplanet.com/dark-style-screensaver/">Dark Style Screensaver</a></li>
+  <li><a href="http://www.saversplanet.com/digital-countdown-screensaver/">Digital Countdown</a></li>
   <li><a href="http://www.saversplanet.com/fairy-lake/">Fairy Lake</a></li>
   <li><a href="http://www.saversplanet.com/fantastic-walk/">Fantastic Walk</a></li>
   <li><a href="http://www.saversplanet.com/fascinating-waterfalls/">Fascinating Waterfalls</a></li>
@@ -181,9 +203,11 @@ With respect to Ad Servers: We are currently partnering with Google to deliver a
   <li><a href="http://www.saversplanet.com/galaxy-screensaver/">Galaxy Dance</a></li>
   <li><a href="http://www.saversplanet.com/grass-time-screensaver/">Grass Time</a></li>
   <li><a href="http://www.saversplanet.com/happy-clock/">Happy Clock</a></li>
+  <li><a href="http://www.saversplanet.com/happy-valentines-screensaver/">Happy Valentines</a></li>
   <li><a href="http://www.saversplanet.com/happy-halloween/">Happy Halloween</a></li>
   <li><a href="http://www.saversplanet.com/horror-of-the-night/">Horror Of The Night</a></li>
   <li><a href="http://www.saversplanet.com/holiday-tree/">Holiday Tree</a></li>
+  <li><a href="http://www.saversplanet.com/holiday-champagne-screensaver/">Holiday Champagne</a></li>
   <li><a href="http://www.saversplanet.com/lake-clock/">Lake Clock</a></li>
   <li><a href="http://www.saversplanet.com/live-pebble-screensaver/">Live Pebble</a></li>
   <li><a href="http://www.saversplanet.com/matrix-screensaver/">Matrix</a></li>
@@ -197,6 +221,7 @@ With respect to Ad Servers: We are currently partnering with Google to deliver a
   <li><a href="http://www.saversplanet.com/nature-reserve/">Nature Reserve</a></li>
   <li><a href="http://www.saversplanet.com/new-year-snowfall/">New Year Snowfall</a></li>
   <li><a href="http://www.saversplanet.com/olympics-screensaver/">Olympics Screensaver</a></li>
+  <li><a href="http://www.saversplanet.com/paradise-birds-screensaver/">Paradise Birds</a></li>
   <li><a href="http://www.saversplanet.com/peaks-screensaver/">Peaks</a></li>
   <li><a href="http://www.saversplanet.com/pumpkin-fire-screensaver/">Pumpkin Fire</a></li>
   <li><a href="http://www.saversplanet.com/rocks-screensaver/">Rocks</a></li>
@@ -305,7 +330,7 @@ With respect to Ad Servers: We are currently partnering with Google to deliver a
 <a href="http://www.saversplanet.com/map/">Map</a> |
 <a href="http://www.saversplanet.com/links/">Links</a>
 </div>
-<p class="footer">© 2007-2016 SaversPlanet.com. All Rights Reserved. <a href="http://www.saversplanet.com/privacy-policy/">Privacy Policy</a>&nbsp;<a href="http://www.saversplanet.com/eula/">EULA</a></p>
+<p class="footer">© 2007-2017 SaversPlanet.com. All Rights Reserved. <a href="http://www.saversplanet.com/privacy-policy/">Privacy Policy</a>&nbsp;<a href="http://www.saversplanet.com/eula/">EULA</a></p>
 <p></p>
 
 <script>
@@ -318,6 +343,9 @@ With respect to Ad Servers: We are currently partnering with Google to deliver a
   ga('send', 'pageview');
 
 </script>
+
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58dccac095a8cead"></script>
 </div>
 
 </body></html>
