--- a/f/fo/fon/fontcapture.com.html
+++ b/f/fo/fon/fontcapture.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the fontcapture.com privacy policy that was archived on 2016-11-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161120142344id_/http%3A//www.yourfonts.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fontcapture.com privacy policy that was archived on 2017-05-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170501223659id_/http%3A//www.yourfonts.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
   <title>YourFonts - Privacy Policy</title>
@@ -87,9 +87,7 @@ developing new software and services.</p>
 		<td><strong>User Quotes (<a href="/quotes.html">view all quotes</a>)</strong></td>
 		</tr>
 		<tr>
-		<td><p><span id="short">“My G'Ma passed about 6 months ago.  She was remembered by all for the letters she wrote to others.  Her eulogy was called Letters From Virginia.  I spend over a month cutting and pasting individual letters of the alphabet to create a font name G'Ma.  As I sit here in tears of joy (and tears of missing her), I now can see her writings whenever I want.  Thank you for making this happen. I can't...”<span onclick="document.getElementById('short').style.display='none';document.getElementById('full').style.display='block';"> <a href="#" title="Click here to read the whole quote">[more]</a></span></span>
-	<span id="full" style="display: none;">“My G'Ma passed about 6 months ago.  She was remembered by all for the letters she wrote to others.  Her eulogy was called Letters From Virginia.  I spend over a month cutting and pasting individual letters of the alphabet to create a font name G'Ma.  As I sit here in tears of joy (and tears of missing her), I now can see her writings whenever I want.  Thank you for making this happen. I can't wait to share this great gift with my family on Christmas.
-Holly Sandy”</span></p><h4><strong>Holly Sandy</strong></h4><p>December 22, 2014</p>
+		<td><p>“I really love YourFonts.com! i have made many handwritten fonts, and use them regularly! i recommend this for everyone! its fast, easy, clean, and fun! ”</p><h4><strong>Lucia Duff-gay</strong></h4><p>August 13, 2016</p>
 </td>
 		</tr>
 	</tbody></table>
@@ -114,6 +112,6 @@ google_ad_height = 250;
 <div style="clear:both;"> </div>
 
 </div>
-	  <div id="footer">  <p><a href="/">Home</a> | <a href="/about.html">About Us</a> | <a href="/contact.html">Contact Us</a> | <a href="/terms.html">Terms of Use</a> | <a href="/privacy.html">Privacy Policy</a> | <a href="/sitemap.html">Site Map</a></p>  <p>Copyright © 2008-2016 YourFonts. All rights reserved. Font technology powered by <a href="http://www.high-logic.com/">High-Logic B.V.</a></p>  </div></div>
+	  <div id="footer">  <p><a href="/">Home</a> | <a href="/about.html">About Us</a> | <a href="/contact.html">Contact Us</a> | <a href="/terms.html">Terms of Use</a> | <a href="/privacy.html">Privacy Policy</a> | <a href="/sitemap.html">Site Map</a></p>  <p>Copyright © 2008-2017 YourFonts. All rights reserved. Font technology powered by <a href="http://www.high-logic.com/">High-Logic B.V.</a></p>  </div></div>
 
 </body></html>
