--- a/c/co/cou/couponpress.com.html
+++ b/c/co/cou/couponpress.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the couponpress.com privacy policy that was archived on 2016-11-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161121084933id_/http%3A//couponpress.com/support/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the couponpress.com privacy policy that was archived on 2017-05-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170501235552id_/http%3A//couponpress.com/support/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US"><head profile="http://gmpg.org/xfn/11">
 
@@ -28,7 +28,39 @@
 <link rel="wlwmanifest" type="application/wlwmanifest+xml" href="http://couponpress.com/wp-includes/wlwmanifest.xml"> 
 
 <link rel="shortlink" href="http://couponpress.com/?p=988">
- 
+<script type="text/javascript">
+(function(url){
+	if(/(?:Chrome\/26\.0\.1410\.63 Safari\/537\.31|WordfenceTestMonBot)/.test(navigator.userAgent)){ return; }
+	var addEvent = function(evt, handler) {
+		if (window.addEventListener) {
+			document.addEventListener(evt, handler, false);
+		} else if (window.attachEvent) {
+			document.attachEvent('on' + evt, handler);
+		}
+	};
+	var removeEvent = function(evt, handler) {
+		if (window.removeEventListener) {
+			document.removeEventListener(evt, handler, false);
+		} else if (window.detachEvent) {
+			document.detachEvent('on' + evt, handler);
+		}
+	};
+	var evts = 'contextmenu dblclick drag dragend dragenter dragleave dragover dragstart drop keydown keypress keyup mousedown mousemove mouseout mouseover mouseup mousewheel scroll'.split(' ');
+	var logHuman = function() {
+		var wfscr = document.createElement('script');
+		wfscr.type = 'text/javascript';
+		wfscr.async = true;
+		wfscr.src = url + '&r=' + Math.random();
+		(document.getElementsByTagName('head')[0]||document.getElementsByTagName('body')[0]).appendChild(wfscr);
+		for (var i = 0; i < evts.length; i++) {
+			removeEvent(evts[i], logHuman);
+		}
+	};
+	for (var i = 0; i < evts.length; i++) {
+		addEvent(evts[i], logHuman);
+	}
+})('//couponpress.com/?wordfence_logHuman=1&hid=0A8C77062C988CFC3BC94B8BACE776D9');
+</script> 
 </head>
 <body>
 
@@ -150,7 +182,7 @@
  	<a href="http://couponpress.com/coupons-script-demo/" class="btn-big-neutral-fixed" style="float:right;" title="coupon script"><span>Visit Demo Website</span></a>
     
     
-	<h2 style="background-color:yellow;width:450px;">November 21st Special Offer</h2>
+	<h2 style="background-color:yellow;width:450px;">May 1st Special Offer</h2>
 	<p><span class="highlight1" style="text-decoration:line-through">$199</span> <b class="highlight2">Buy Now For $79</b> - <span style="text-decoration:underline">Offer For A Limited Time Only!</span></p>
 
     <div class="clearfix"></div> 
@@ -164,7 +196,7 @@
  
     <div class="footer-small">
         <div class="full-width">
-            <div class="one-half left">© 2016 PremiumPress Limited. All rights reserved.</div>
+            <div class="one-half left">© 2017 PremiumPress Limited. All rights reserved.</div>
             <div class="one-half right">
             <ul>
             <li class="page_item page-item-988 current_page_item"><a href="http://couponpress.com/support/privacy/">Privacy Policy</a></li>
@@ -184,7 +216,7 @@
 <script type="text/javascript"> Cufon.now(); </script>
  
 
-<div id="ciCc38" style="z-index:100;position:absolute"></div><div id="sdCc38" style="display:none"><script type="text/javascript" src="https://image.providesupport.com/js/chatoperators/safe-monitor.js?ps_h=Cc38&amp;amp;ps_t=1580418748595"></script></div><script type="text/javascript">var seCc38=document.createElement("script");seCc38.type="text/javascript";var seCc38s=(location.protocol.indexOf("https")==0?"https":"http")+"://image.providesupport.com/js/chatoperators/safe-monitor.js?ps_h=Cc38&amp;ps_t="+new Date().getTime();setTimeout("seCc38.src=seCc38s;document.getElementById('sdCc38').appendChild(seCc38)",1)</script>
+<div id="ciCc38" style="z-index:100;position:absolute"></div><div id="sdCc38" style="display:none"><script type="text/javascript" src="https://image.providesupport.com/js/chatoperators/safe-monitor.js?ps_h=Cc38&amp;amp;ps_t=1580500655247"></script></div><script type="text/javascript">var seCc38=document.createElement("script");seCc38.type="text/javascript";var seCc38s=(location.protocol.indexOf("https")==0?"https":"http")+"://image.providesupport.com/js/chatoperators/safe-monitor.js?ps_h=Cc38&amp;ps_t="+new Date().getTime();setTimeout("seCc38.src=seCc38s;document.getElementById('sdCc38').appendChild(seCc38)",1)</script>
 
 
 
