--- a/s/sh/sho/shopperstop.org.html
+++ b/s/sh/sho/shopperstop.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the shopperstop.org privacy policy that was archived on 2016-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161231090843id_/http%3A//www.shopperstop.org/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the shopperstop.org privacy policy that was archived on 2017-05-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170502034921id_/http%3A//shopperstop.org/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Privacy Policy : Shoppers Top Online Shopping  Directory</title>
