elementvape.com (archived on 2017-05-02)
{
  "alexa_rank": 29725,
  "analysis_subcorpus": true,
  "categories": "shopping",
  "char_count": 6966,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.42,
  "homepage_snapshot_redirected_domain": "elementvape.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170419132459id_/https://www.elementvape.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170419132459id_/http%3A//elementvape.com",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "elementvape.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170502054256id_/https%3A//www.elementvape.com/privacy-policy",
  "policy_title": "Privacy Policy",
  "policy_url": "elementvape.com/privacy-policy",
  "sha1": "903f423ad149a0a6464e0281cbaab99e727b7667",
  "simhash": 9825631290759643578,
  "simhash_updated": false,
  "site_hostname": "elementvape.com",
  "site_url": "http://elementvape.com",
  "smog": 13.97,
  "strict_updated": false,
  "timestamp": "20170502054256",
  "word_count": 1135,
  "year": 2017
}

--- a/e/el/ele/elementvape.com.html
+++ b/e/el/ele/elementvape.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the elementvape.com privacy policy that was archived on 2016-08-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160817015646id_/https%3A//www.elementvape.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the elementvape.com privacy policy that was archived on 2017-05-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170502054256id_/https%3A//www.elementvape.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js"><!--<![endif]--><head>
 <meta charset="utf-8">
@@ -207,7 +207,7 @@ _gaq.push(['_trackPageview']);
 <div class="grid-3">
 <h3>HELP</h3>
 <ul>
-<li class="last privacy"><a href="https://www.elementvape.com/contacts">Contact Us</a></li>
+<li class="last privacy"><a href="https://www.elementvape.com/support">Contact Us</a></li>
 <li class="last privacy"><a href="https://www.elementvape.com/returns-policy" target="_self">Returns Policy</a></li>
 <li class="last privacy"><a href="https://www.elementvape.com/terms-and-conditions" target="_self">Terms and Conditions</a></li>
 <li class="last privacy"><a href="https://www.elementvape.com/privacy-policy">Privacy Policy</a></li>
