streampussy.com (archived on 2017-05-02)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "adult",
  "char_count": 7142,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 15.36,
  "homepage_snapshot_redirected_domain": "streampussy.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170421094250id_/http://www.streampussy.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170421094250id_/http%3A//streampussy.com",
  "interval": "2017_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "streampussy.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170502090748id_/http%3A//www.streampussy.com/privacy.php",
  "policy_title": "Free stream pussy porn video tube",
  "policy_url": "streampussy.com/privacy.php",
  "sha1": "8a4f90acd490b7ab266a38b56a67236817eca5e7",
  "simhash": 2748769823632185984,
  "simhash_updated": false,
  "site_hostname": "streampussy.com",
  "site_url": "http://streampussy.com",
  "smog": 17.28,
  "strict_updated": false,
  "timestamp": "20170502090748",
  "word_count": 1107,
  "year": 2017
}

--- a/s/st/str/streampussy.com.html
+++ b/s/st/str/streampussy.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the streampussy.com privacy policy that was archived on 2016-11-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161105122501id_/http%3A//www.streampussy.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the streampussy.com privacy policy that was archived on 2017-05-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170502090748id_/http%3A//www.streampussy.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
-<title>Free chinese porn video tube</title> 
+<title>Free stream pussy porn video tube</title> 
  
-<meta name="keywords" content="porn, pussy, free, pron, chinese, video, clips, xxx, mp4, iphone, streampussy.com, porn video, homemade, free HD, teen webcam, sex videos, download, hot xnxx, free teen 18, pussy pron movies, streampussy, mp4 porn mobil"> 
-<meta name="description" content="free chinese porn video tube of mobile teen webcam sex video youpron clips. Download hot mobile mp4 porn mobile "> 
+<meta name="keywords" content="porn, pussy, free, pron, video, clips, xxx, mp4, iphone, streampussy.com, porn video, homemade, free HD, teen webcam, sex videos, download, hot xnxx, free teen 18, pussy pron movies, stream pussy, mp4 porn mobil"> 
+<meta name="description" content="Free mobile teen pussy stream webcam sex videos."> 
 <meta name="allow-search" content="yes"> 
 <meta name="robots" content="index,all">
 <meta name="RATING" content="RTA-5042-1996-1400-1577-RTA">
