mobooka.com (archived on 2017-05-02)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 18701,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 14.99,
  "homepage_snapshot_redirected_domain": "mobooka.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170330094932id_/http://mobooka.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170330094932id_/http%3A//mobooka.com",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "mobooka.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170502135359id_/http%3A//mobooka.com/privacy",
  "policy_title": "Privacy Policy | Performance Affiliate and Publisher Network - Internet Marketing - Mobooka",
  "policy_url": "mobooka.com/privacy",
  "sha1": "c1318648eb729337b6382209d30beec583980b64",
  "simhash": 11237539513898828126,
  "simhash_updated": false,
  "site_hostname": "mobooka.com",
  "site_url": "http://mobooka.com",
  "smog": 16.36,
  "strict_updated": false,
  "timestamp": "20170502135359",
  "word_count": 2920,
  "year": 2017
}

--- a/m/mo/mob/mobooka.com.html
+++ b/m/mo/mob/mobooka.com.html
@@ -1,10 +1,10 @@
-<!--The following is the downloaded HTML source of the mobooka.com privacy policy that was archived on 2016-11-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161121200426id_/http%3A//mobooka.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mobooka.com privacy policy that was archived on 2017-05-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170502135359id_/http%3A//mobooka.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml"><head>
 		<meta charset="UTF-8">
 		
-		<base href="http://www.mobooka.com/">		<meta name="description" content="Worldwide Performance Marketing and Advertising Agency Specializing In Affiliate Marketing, Mobile Advertising, Search Engine Marketing, Social Advertising, Media Buying and Customized Lead Generation.  Whether increasing brand awareness or growing online sales, Mobooka delivers profitable results for our advertiser and publisher partners.">
+		<base href="http://mobooka.com/">		<meta name="description" content="Worldwide Performance Marketing and Advertising Agency Specializing In Affiliate Marketing, Mobile Advertising, Search Engine Marketing, Social Advertising, Media Buying and Customized Lead Generation.  Whether increasing brand awareness or growing online sales, Mobooka delivers profitable results for our advertiser and publisher partners.">
 
 		<meta property="og:image" content="http://mobooka.com/content/images/logo.png">
 		<meta property="og:title" content="Performance Affiliate and Publisher Network - Internet Marketing - Mobooka">
