--- a/a/ar/art/artoftime.com.html
+++ b/a/ar/art/artoftime.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the artoftime.com privacy policy that was archived on 2016-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161218231812id_/http%3A//www.artoftime.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the artoftime.com privacy policy that was archived on 2017-05-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170503001044id_/http%3A//artoftime.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html dir="ltr" lang="en"><head>
 
@@ -686,7 +686,7 @@ My Account </div>
 
 
 <div id="espoweredbylink" style="float:left; margin-top:15px;"><!-- bottom footer //-->
-Copyright © 2016 Art of Time.
+Copyright © 2017 Art of Time.
 
 
 <!-- ES_HOME_SLIDER BEGIN //--><!-- ES_HOME_SLIDER END //-->
