newbee.ng (archived on 2017-05-03)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "shopping",
  "char_count": 10931,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.38,
  "homepage_snapshot_redirected_domain": "newbee.ng",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170430195210id_/http://www.newbee.ng/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170430195210id_/http%3A//newbee.ng",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "newbee.ng",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170503075931id_/http%3A//www.newbee.ng/privacy-policy",
  "policy_title": "Baby Online Store | Privacy Policy | Newbee Nigeria",
  "policy_url": "newbee.ng/privacy-policy",
  "sha1": "25450200b38592ec1870aa9f0e15864e830d04a9",
  "simhash": 10222990719226474896,
  "simhash_updated": false,
  "site_hostname": "newbee.ng",
  "site_url": "http://newbee.ng",
  "smog": 14.65,
  "strict_updated": false,
  "timestamp": "20170503075931",
  "word_count": 1855,
  "year": 2017
}

--- a/n/ne/new/newbee.ng.html
+++ b/n/ne/new/newbee.ng.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the newbee.ng privacy policy that was archived on 2016-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160605211826id_/http%3A//www.newbee.ng/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the newbee.ng privacy policy that was archived on 2017-05-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170503075931id_/http%3A//www.newbee.ng/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 
@@ -138,18 +138,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="seller_promise_block"> 
 <div class="container"> 
 <div class="row"> 
-<div class="hidden-xs col-sm-8 left_block"><i class="fa fa-truck fa-flip-horizontal"></i> Delivery in: Lagos <i class="fa fa-thumbs-up"></i> Best Deals <i class="fa fa-lock"></i> Pay on Delivery: Cash or POS</div>  
-<div class="col-xs-12 col-sm-4 right_block">
-<small class="visible-xs left_block mbl"><i class="fa fa-truck fa-flip-horizontal"></i> Delivery in: Lagos</small>
-Need Help?  <a href="tel:+234 080 9025 3621" style="font-size: 16px; font-weight: bold;"> 080-9025-3621</a>
-</div> 
-</div> 
-</div>
+<div class="hidden-xs col-sm-8 left_block">Delivery in: Lagos Best Deals Pay on Delivery: Cash or POS</div>
+ 
+<div class="col-xs-12 col-sm-4 right_block" style="float:right"><small class="visible-xs left_block mbl"> Delivery in: Lagos</small> Need Help? <a style="font-size: 16px; font-weight: bold;" href="tel:+234-080-3901-2333"> 080-3901-2333</a></div>
  </div>
-
-<div class="pam" style="background-color: #eb75af; color: white; text-align: center; line-height: normal;">
-<strong>NO MORE MINIMUM ORDER AMOUNT! <br class="visible-xs"><span class="mhs hidden-xs"></span>SHOP NOW...</strong> <i class="fa fa-shopping-cart"></i> <i class="fa fa-shopping-cart"></i> <i class="fa fa-shopping-cart"></i>
-</div>    <!-- block_header_seller_promise - end -->
+ </div>
+ </div>
+<div class="pam" style="background-color: #eb75af; color: white; text-align: center; line-height: normal;"><strong>NO MORE MINIMUM ORDER AMOUNT! <br class="visible-xs">SHOP NOW...</strong></div>    <!-- block_header_seller_promise - end -->
     <div class="container ptm">
         <div class="row row-eq-height">
             <div class="col-xs-5 col-sm-4 col-md-3">
@@ -1303,7 +1298,7 @@ However we would like to point out that the use of the 'basket' functionality on
         </div></div>    <div class="block block-account hidden">
         <div class="overlay"></div>
         <form action="http://www.newbee.ng/customer/account/loginPost/" method="post" id="mini-login-form">
-            <input name="form_key" type="hidden" value="BdfWuzlYxFup8fdF">
+            <input name="form_key" type="hidden" value="rH7Rfal0KTt12WiE">
             <div class="registered-users bc bb pbm">
                 <div class="content">
                     <h5 class="mtn">Already a Customer? <strong>Sign In!</strong></h5>
@@ -1372,7 +1367,7 @@ However we would like to point out that the use of the 'basket' functionality on
     <span><strong>Need Help?</strong> Contact us!</span>
 </div>
 <div class="mtm mbs">We're here for you, weekdays 8am - 6pm</div>
-<div class="phone text-gray-dark"><strong> <a href="tel:+234 080 9025 3621"> 080-9025-3621</a> · <a href="mail:info@newbee.ng">info@newbee.ng</a></strong> </div>                        <!-- block_footer_contacts - end -->
+<div class="phone text-gray-dark"><strong> <a href="tel:+23408039012333"> 080-3901-2333</a> · <a href="mail:info@newbee.ng">info@newbee.ng</a></strong> </div>                        <!-- block_footer_contacts - end -->
                     </div>
                     <div class="col-xs-12 mtm">
                         
@@ -1494,7 +1489,7 @@ However we would like to point out that the use of the 'basket' functionality on
       <!--<img src="http://media.newbee.ng/wysiwyg/webpay_logo.png" alt="" />-->
 </div>
 <div class="col-xs-12 text-center">
-   © Newbee 2016. All rights reserved.<br><br>
+   © Newbee 2017. All rights reserved.<br><br>
 </div>        </div>
     </div>
 </div>
