downscripts.com (archived on 2017-05-31)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "informationtech",
  "char_count": 2530,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.27,
  "homepage_snapshot_redirected_domain": "downscripts.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170215091359id_/http://downscripts.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170215091359id_/http%3A//downscripts.com",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "downscripts.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170531161955id_/http%3A//www.downscripts.com/privacy.html",
  "policy_title": "DownScripts Privacy Policy",
  "policy_url": "downscripts.com/privacy.html",
  "sha1": "8abfef0b90085bf31a568b9442c3a5b1444744b3",
  "simhash": 8557418131763948434,
  "simhash_updated": false,
  "site_hostname": "downscripts.com",
  "site_url": "http://downscripts.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20170531161955",
  "word_count": 407,
  "year": 2017
}

--- a/d/do/dow/downscripts.com.html
+++ b/d/do/dow/downscripts.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the downscripts.com privacy policy that was archived on 2016-12-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161221081037id_/http%3A//www.downscripts.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the downscripts.com privacy policy that was archived on 2017-05-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170531161955id_/http%3A//www.downscripts.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <meta charset="UTF-8">
@@ -164,6 +164,10 @@ We reserve the right to make changes to this policy without notice.  <br>
 	 <br>
 		
 	 <a href="http://www.1cargames.com/car-racing-games" title="car racing games" rel="nofollow"><img src="/images/1car.png" border="0" width="150" height="150"></a>
+ <br>
+		
+	 <a href="http://apkonplay.com/" title="APK downloader from  GooglePlay"><img src="http://apkonplay.com/images/androidappsbizlogo.png" border="0" width="150"></a>
+
 	  </p>
 	  </div>
 	  </div> 
@@ -184,5 +188,5 @@ We reserve the right to make changes to this policy without notice.  <br>
 <a href="http://www.downscripts.com/dmca.html" title="" class="white">DMCA Notice</a>-<a href="http://www.downscripts.com/privacy.html" title="" class="white">Privacy Policy</a>
 </div>
 <div class="bottombar">2004 - 2013 DownScripts. All rights reserved.</div>
-<script type="text/javascript">/* <![CDATA[ */(function(d,s,a,i,j,r,l,m,t){try{l=d.getElementsByTagName('a');t=d.createElement('textarea');for(i=0;l.length-i;i++){try{a=l[i].href;s=a.indexOf('/cdn-cgi/l/email-protection');m=a.length;if(a&&s>-1&&m>28){j=28+s;s='';if(j<m){r='0x'+a.substr(j,2)|0;for(j+=2;j<m&&a.charAt(j)!='X';j+=2)s+='%'+('0'+('0x'+a.substr(j,2)^r).toString(16)).slice(-2);j++;s=decodeURIComponent(s)+a.substr(j,m-j)}t.innerHTML=s.replace(/</g,'&lt;').replace(/>/g,'&gt;');l[i].href='mailto:'+t.value}}catch(e){}}}catch(e){}})(document);/* ]]> */</script>
+<script>/* <![CDATA[ */(function(d,s,a,i,j,r,l,m,t){try{l=d.getElementsByTagName('a');t=d.createElement('textarea');for(i=0;l.length-i;i++){try{a=l[i].href;s=a.indexOf('/cdn-cgi/l/email-protection');m=a.length;if(a&&s>-1&&m>28){j=28+s;s='';if(j<m){r='0x'+a.substr(j,2)|0;for(j+=2;j<m&&a.charAt(j)!='X';j+=2)s+='%'+('0'+('0x'+a.substr(j,2)^r).toString(16)).slice(-2);j++;s=decodeURIComponent(s)+a.substr(j,m-j)}t.innerHTML=s.replace(/</g,'&lt;').replace(/\>/g,'&gt;');l[i].href='mailto:'+t.value}}catch(e){}}}catch(e){}})(document);/* ]]> */</script>
 </body></html>
