--- a/m/my/myt/mytravelmap.tk.html
+++ b/m/my/myt/mytravelmap.tk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mytravelmap.tk privacy policy that was archived on 2016-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161217063830id_/http%3A//www.mytravelmap.tk/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mytravelmap.tk privacy policy that was archived on 2017-05-31.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170531180133id_/http%3A//www.mytravelmap.xyz/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
