undergroundshirts.com (archived on 2017-06-02)
{
  "alexa_rank": 158341,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 18417,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.75,
  "homepage_snapshot_redirected_domain": "undergroundshirts.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170419061432id_/http://undergroundshirts.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170419061432id_/http%3A//undergroundshirts.com",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "undergroundshirts.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170602022015id_/http%3A//undergroundshirts.com/privacy_policy",
  "policy_title": "Privacy Policy | Underground Printing",
  "policy_url": "undergroundshirts.com/privacy_policy",
  "sha1": "4ae9985c4abb4ecf2b5c72bf3df09745f5e3bd05",
  "simhash": 13382162294744935752,
  "simhash_updated": false,
  "site_hostname": "undergroundshirts.com",
  "site_url": "http://undergroundshirts.com",
  "smog": 14.65,
  "strict_updated": false,
  "timestamp": "20170602022015",
  "word_count": 2924,
  "year": 2017
}

--- a/u/un/und/undergroundshirts.com.html
+++ b/u/un/und/undergroundshirts.com.html
@@ -1,10 +1,9 @@
-<!--The following is the downloaded HTML source of the undergroundshirts.com privacy policy that was archived on 2016-12-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161226063349id_/http%3A//undergroundshirts.com/privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the undergroundshirts.com privacy policy that was archived on 2017-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170602022015id_/http%3A//undergroundshirts.com/privacy_policy) for the most accurate reproduction.-->
 
 <html class=" js "><head>
-	<meta name="title" content="
-		Privacy Policy		 | Underground Printing		">
-	<meta name="description" content="">
+			<title>Privacy Policy | Underground Printing</title>
+		<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta charset="utf-8">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">	<link href="/favicon.ico" type="image/x-icon" rel="icon"><link href="/favicon.ico" type="image/x-icon" rel="shortcut icon"><link rel="stylesheet" type="text/css" href="/css/stylized.css"><link rel="stylesheet" type="text/css" href="/css/style.css"><link rel="stylesheet" type="text/css" href="/css/tipsy.css"><link rel="stylesheet" type="text/css" href="/css/colorbox.css"><link rel="stylesheet" type="text/css" href="/css/loadingStyles.css"><script id="twitter-wjs" src="//platform.twitter.com/widgets.js"></script><script type="text/javascript" src="/js/jquery-1.8.2.min.js"></script><script type="text/javascript" src="/js/jquery-ui-1.9.1.custom.min.js"></script><script type="text/javascript" src="/js/jquery.json.js"></script><script type="text/javascript" src="/js/jquery.colorbox-min.js"></script><script type="text/javascript" src="/js/bxslider.js"></script><script type="text/javascript" src="/js/jquery.tipsy.js"></script><script type="text/javascript" src="/js/underground.js"></script><script type="text/javascript" src="/js/loader.js"></script><script type="text/javascript" src="/js/modernizr.js"></script><script type="text/javascript" src="/constant_contact/js/email_newsletter.js"></script><link rel="stylesheet" type="text/css" href="/drop_down/css/style.css" once="1"><script type="text/javascript" src="/drop_down/js/script.js"></script>	<!--<script src="//cdn.optimizely.com/js/151198918.js"></script>-->
@@ -40,7 +39,8 @@
 			<nav id="utility_nav-left">
 				<ul>
 					<li><a href="http://greek.undergroundshirts.com">Greek</a> | </li>
-					<li><a href="http://corporate.undergroundshirts.com">Corporate</a></li>
+					<li><a href="http://corporate.undergroundshirts.com">Corporate</a> | </li>
+					<li><a href="http://breweries.undergroundshirts.com">Breweries</a></li>
 				</ul>
 			</nav>
 
@@ -99,6 +99,7 @@
 											<li><a href="/catalogs/view/1000169">Drinkware</a></li>
 											<li><a href="/catalogs/view/1000175">Office Supplies</a></li>
 											<li><a href="/catalogs/view/1000181">Novelty</a></li>
+											<li><a href="/catalogs/view/1000228">Brands</a></li>
 											<li><a href="/catalogs/view/1000207">Made in America</a></li>
 											</ul>
 	</li>
@@ -108,7 +109,7 @@
 									<li class="block-wrapper first">
 					<strong class="unclickable">Ann Arbor, MI</strong>
 						<div class="item-wrapper">
-							<div class="location"><a href="/locations/michigan/ann_arbor/south_main_street/briarwood/ann_arbor_saline/woodland_plaza">2248 S. Main</a></div><div class="location"><a href="/locations/michigan/ann_arbor/main_street/downtown">329 S. Main St</a></div><div class="location"><a href="/locations/michigan/ann_arbor/south_university">1114 South University</a></div><div class="location"><a href="/locations/michigan/ann_arbor/north_university">Moe Sport Shops</a></div><div class="location"><a href="/locations/michigan/ann_arbor/main_street/downtown/bo">Bo</a></div><div class="location"><a href="/locations/">Corporate Office</a></div>						</div>
+							<div class="location"><a href="/locations/michigan/ann_arbor/south_main_street/briarwood/ann_arbor_saline/woodland_plaza">2248 S. Main</a></div><div class="location"><a href="/locations/michigan/ann_arbor/main_street/downtown">329 S. Main St</a></div><div class="location"><a href="/locations/michigan/ann_arbor/south_university">1114 South University</a></div><div class="location"><a href="/locations/michigan/ann_arbor/main_street/downtown/bo">Bo</a></div><div class="location"><a href="/locations/">Corporate Office</a></div>						</div>
 					</li>
 									<li class="block-wrapper ">
 					<strong class="unclickable">Kalamazoo, MI</strong>
@@ -554,7 +555,7 @@
 		<img src="/img/icons/pic.png" width="23" height="23" class="pcontent_footer" alt="">	</span>
 	<h3>Pic of the Month</h3>
 </div>	<div class="cont">
-		<a href="/pic_of_the_month"><img src="https://s3.amazonaws.com/ugp-io/front-end/images/pic-of-the-month/20161127175806-Took_a_much_needed_hike_to_clear_our_minds_this_weekend._4_more_days_of_interviews_with_entrepreneurs_coming_up___IncredibleIndia__RossMAP_1480287486.jpg" alt="https://s3.amazonaws.com/ugp-io/front-end/images/pic-of-the-month/20161127175806-Took_a_much_needed_hike_to_clear_our_minds_this_weekend._4_more_days_of_interviews_with_entrepreneurs_coming_up___IncredibleIndia__RossMAP_1480287486.jpg" width="100" class="weekly"></a>		<br>
+		<a href="/pic_of_the_month"><img src="https://s3.amazonaws.com/ugp-io/front-end/images/pic-of-the-month/20170320131032-6174556816_IMG_1261_1490029832.JPG" alt="https://s3.amazonaws.com/ugp-io/front-end/images/pic-of-the-month/20170320131032-6174556816_IMG_1261_1490029832.JPG" width="100" class="weekly"></a>		<br>
 		<a href="/pic_of_the_month">MORE INFO»</a>
 	</div>
 	<img src="/img/structure/footer-splash.png" class="footer_splash" width="164" height="105" alt="footer splash graphic"></section>
@@ -598,20 +599,8 @@ div.success
 	<h3>Get Offers &amp; Learn More</h3>
 </div>	<div class="cont" id="news_div">
 		<p>Sign up for our newsletter to be the first to know about our new offers!</p>
-		<form action="/newsletters/add_contact" controller="newsletters" id="NewsletterAddContactForm" method="post" accept-charset="utf-8"><div style="display:none;"><input type="hidden" name="_method" value="POST"><input type="hidden" name="data[_Token][key]" value="8e7e41d08ea051d01485a29b0aa7e729e4750c6e" id="Token1902312956"></div>		<input type="hidden" name="data[Newsletter][listName]" value="UGPCustMailingList_NonStore" id="NewsletterListName">				<input name="data[Newsletter][email]" placeholder="Join Our Mailing List" class="inset_field" id="sign_me_up_email" maxlength="255" type="text">		<input value="SIGN ME UP!" id="sign_me_up" type="submit"><div style="display:none;"><input type="hidden" name="data[_Token][fields]" value="86175ac725f449ff7b487f3d4320ccaf4dc435ec%3ANewsletter.listName" id="TokenFields1186523602"><input type="hidden" name="data[_Token][unlocked]" value="" id="TokenUnlocked2131254209"></div></form>	
+		<form action="/newsletters/add_contact" controller="newsletters" id="NewsletterAddContactForm" method="post" accept-charset="utf-8"><div style="display:none;"><input type="hidden" name="_method" value="POST"><input type="hidden" name="data[_Token][key]" value="5f810793af56fac2e9a0b3cedc5c99e664ab9df9" id="Token1909882228"></div>		<input type="hidden" name="data[Newsletter][listName]" value="UGPCustMailingList_NonStore" id="NewsletterListName">				<input name="data[Newsletter][email]" placeholder="Join Our Mailing List" class="inset_field" id="sign_me_up_email" maxlength="255" type="text">		<input value="SIGN ME UP!" id="sign_me_up" type="submit"><div style="display:none;"><input type="hidden" name="data[_Token][fields]" value="86175ac725f449ff7b487f3d4320ccaf4dc435ec%3ANewsletter.listName" id="TokenFields2136915773"><input type="hidden" name="data[_Token][unlocked]" value="" id="TokenUnlocked1539509227"></div></form>	
 		<span id="news_span"></span>
-	</div>
-</section><section id="pearup">
-	<div class="section_heading icon">
-	<span class="circ">
-		<img src="/img/icons/pic.png" width="23" height="23" class="pcontent_footer" alt="">	</span>
-	<h3>Get Sponsored!</h3>
-</div>	<div class="cont">
-		<p>Earn up to $1000 off your next Team Order with our partners at Pear!</p>
-		<p></p>
-		<form action="https://www.pearup.com/find/sponsorships/underground?affid=14" method="get">
-		    <input type="submit" value="LEARN MORE!" name="Submit" id="frm1_submit" style="float: right;">
-		</form>
 	</div>
 </section>
 <section id="questions">
@@ -629,7 +618,7 @@ div.success
 </section><br><br>
 								<div style="clear: both; height: 20px"></div>
 				<div style="float: left">
-					<address>© 2016 Underground Printing, All Rights Reserved </address>
+					<address>© 2017 Underground Printing, All Rights Reserved </address>
 					<nav id="footer_nav">
 						<ul class="stl">
 							<li><a href="/terms_of_use">Terms of Use</a></li>
@@ -696,17 +685,7 @@ div.success
 	var pageTracker = _gat._getTracker("UA-6204786-1");
 	pageTracker._trackPageview();
 	} catch(err) {}
-</script>	<!--
-<script type="text/javascript">
-document.write(unescape("%3Cscript src='" + (("https:" == document.location.protocol) ? "https://ssl-" : "http://")
-+ "include.reinvigorate.net/re_.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-reinvigorate.track("58lw4-603r4r8w42");
-} catch(err) {}
-</script>
--->	<!-- Google Code for Remarketing Tag -->
+</script>	<!-- Google Code for Remarketing Tag -->
 <!--------------------------------------------------
 Remarketing tags may not be associated with personally identifiable information or placed on pages related to sensitive categories. See more information and instructions on how to setup the tag on: http://google.com/ads/remarketingsetup
 --------------------------------------------------->
@@ -743,6 +722,5 @@ loader: "static.olark.com/jsclient/loader0.js",name:"olark",methods:["configure"
 /* custom configuration goes here (www.olark.com/documentation) */
 olark.identify('9142-641-10-2372');/*]]>*/</script><noscript><a href="https://www.olark.com/site/9142-641-10-2372/contact" title="Contact us" target="_blank">Questions? Feedback?</a> powered by <a href="http://www.olark.com?welcome" title="Olark live chat software">Olark live chat software</a></noscript>
 <!-- end olark code -->
-
 
 </body></html>
